export.css
/* ... */
.formatted_content h1:last-child {
    margin-block-end: 0;
}
.formatted_content ul,
.formatted_content ol {
    list-style: disc;
    padding: 0;
    margin: 0.65em 0 0.9em;
}
.formatted_content ul:first-child,
.formatted_content ol:first-child {
    margin-block-start: 0;
}
.formatted_content ul li,
.formatted_content ol li {
    margin: 0.3em 0 0 2em;
}
.formatted_content ul[dir="rtl"] li,
.formatted_content ol[dir="rtl"] li {
    margin: 0.3em 2em 0 0;
}
.formatted_content ul ul,
.formatted_content ul ol,
.formatted_content ol ul,
.formatted_content ol ol {
    margin: 0;
}
.formatted_content ul pre,
.formatted_content ol pre {
    display: inline-block;
    vertical-align: top;
    margin: 0;
    inline-size: 100%;
}
.formatted_content ol {
    list-style: decimal;
}
.formatted_content pre {
    margin: 0.5em 0;
}
.formatted_content p,
.formatted_content div {
    margin: 0;
}
@media screen and (min-width: 768px) {
    .formatted_content--medium {
        font-size: var(--txt-large);
    }
}
@media screen and (min-width: 768px) {
    .formatted_content--large {
        font-size: 1.98rem;
    }
}
ins.diffins,
ins.diffmod {
    background: var(--color-bg--diff-add);
    text-decoration: none;
}
del.diffdel,
del.diffmod {
    text-decoration: line-through;
    background: var(--color-bg--diff-del);
}
.unzipped-overlay {
    display: none !important;
}
html {
    font-size: 10px;
    background-color: var(--color-white);
}
body {
    max-inline-size: 800px;
    margin: 0.5em auto 1em;
    padding: 0 1em;
    background-color: var(--color-white);
}
h1 {
    font-size: var(--txt-xxx-large);
}
table {
    line-height: inherit;
    font-family: inherit;
    font-size: inherit;
    border-spacing: 0;
}
img {
    max-inline-size: none;
}
.formatted_content img,
.chat-line__body img {
    max-inline-size: 100%;
}
dt {
    color: var(--color-uncolor);
    font-weight: bold;
    font-size: smaller;
}
dd {
    margin: 0 0 1em 0;
}
.float--left {
    float: left;
}
.float--right {
    float: right;
}
.align--middle {
    vertical-align: middle;
}
.position-context {
    position: relative;
}
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}
.clearfix:after {
    clear: both;
}
.attachment__icon {
    padding-inline-end: 15px;
    width: 60px;
}
.metadata {
    color: var(--color-uncolor);
}
.metadata .decorated {
    color: inherit;
}
.archived-tag {
    display: inline-block;
    padding: 0.3em 0.5em;
    background: var(--color-uncolor);
    color: var(--color-white);
    text-transform: uppercase;
    border-radius: 0.4rem;
    line-height: 1;
    font-size: var(--txt-xxxx-small);
    position: relative;
    inset-block-start: -0.25em;
}
.flag,
.flag__body {
    overflow: hidden;
}
.flag__icon {
    float: left;
    margin-inline-end: 1em;
}
.flag__icon img {
    display: block;
}
.nothing-to-see {
    font-family: "Chalkboard", "Comic Sans", "Comic Sans MS", "ChalkboardSE-Regular", "Marker Felt", "Purisa", "URW Chancery L", sans-serif;
    letter-spacing: 1px;
}
.divider {
    margin: 1em auto;
}
.divider--full {
    margin: 1em -1em;
}
.divider--light {
    border-block-end-color: var(--tint-ink-5);
}
.divider--heavy {
    border-block-end: 2px solid var(--color-black);
}
.date-divider {
    text-align: center;
}
.date-divider__inner {
    border-block-start: 2px solid var(--color-uncolor);
    display: inline-block;
    margin-block-start: 1.5em;
    padding: 0.5em 1em;
}
.date-divider--schedule {
    text-align: start;
}
.date-divider--schedule .date-divider__inner {
    border: 0;
    border-block-end: 2px solid var(--color-uncolor);
    margin: 0 0 0.5em;
    padding: 0 1em 0 0;
}
.global-back {
    inset-inline-start: 0;
    position: absolute;
    inset-block-start: 0;
}
.section-nav {
    background: var(--color-white);
    block-size: 50px;
    border-block-end: 1px solid var(--tint-ink-15);
    border-block-start: 1px solid var(--tint-ink-15);
    inline-size: 100%;
}
.section-nav__inner {
    block-size: 50px;
    display: flex;
    margin: 0 auto;
    max-inline-size: 900px;
    overflow: hidden;
}
.section-nav__toggle:checked ~ .section-nav__inner {
    block-size: auto;
}
.section-nav__toggle:checked ~ .section-nav__inner .section-nav__toggle-label .section-nav__link:after {
    border-color: transparent transparent var(--color-black) transparent;
    border-width: 0 5px 5px 5px;
}
.section-nav__link {
    color: var(--color-black);
    cursor: pointer;
    display: block;
    font-size: 14px;
    line-height: 50px;
    padding: 0 14px;
    text-decoration: none;
}
.section-nav__link:hover {
    text-decoration: underline;
}
.section-nav__label {
    align-self: flex-start;
    border-inline-start: 1px solid var(--tint-ink-15);
    flex-shrink: 0;
}
.section-nav__list {
    background: var(--color-white);
    border-block-start: 0;
    border-inline-end: 0;
    border: 1px solid var(--tint-ink-15);
    display: flex;
    flex-wrap: wrap;
    inline-size: 100%;
    list-style: none;
    margin: 0;
    padding: 0;
}
@media screen and (max-width: 400px) {
    .section-nav__item {
        flex-basis: 100%;
    }
}
.section-nav__toggle-label {
    background: var(--color-white);
    border-block-end: 1px solid var(--tint-ink-15);
    border-inline-end: 1px solid var(--tint-ink-15);
    flex-shrink: 0;
}
.section-nav__toggle-label .section-nav__link {
    padding-inline-end: 40px;
    position: relative;
}
.section-nav__toggle-label .section-nav__link::after {
    block-size: 0;
    border-color: var(--color-black) transparent transparent transparent;
    border-style: solid;
    border-width: 5px 5px 0 5px;
    content: "";
    inline-size: 0;
    inset-block-start: 22px;
    inset-inline-end: 20px;
    position: absolute;
}
.section-nav__toggle {
    opacity: 0;
    position: absolute;
    z-index: -1;
}
.project-name {
    margin: 0 auto;
    max-inline-size: 80%;
    word-break: break-word;
    word-wrap: break-word;
}
/* ... */

